# blink-sysinfo

./: CMakeLists.txt  README.md
src/base/: CMakeLists.txt  file.cpp  process.cpp  process.h  unit.h  unit_test.cpp
src/formats/: CMakeLists.txt
src/formats/computer/: display.cpp  display.h  environment.h  filesystem.cpp  groups.cpp  languages.h  memory.cpp  memory.h  modules.cpp  modules.h  summary.h  uptime.cpp  users.cpp
src/formats/devices/: audio_devices.cpp  battery.cpp  devices.cpp  devices.h  input_devices.h  processor.h  storage.cpp  storage.h  usb.cpp  usb.h
src/formats/network/: arp_table.cpp  arp_table.h  interfaces.cpp  interfaces.h  ip_connections.cpp  ip_connections.h  network.cpp  routing_table.cpp
src/modules/computer/: boots_test.cpp  computer.cpp  computer.h  development.cpp  development.h  development_test.cpp  display.h  display_test.cpp  environment.h  filesystem.cpp  filesystem_test.cpp  languages.h  languages_test.cpp  memory.h  modules.cpp  modules_test.cpp  operation_system.cpp  operation_system.h  summary.cpp  uptime.cpp  users_test.cpp
src/modules/devices/: audio_devices.cpp  audio_devices.h  battery.h  devices.h  input_devices.h  memory_test.cpp  pci.h  processor_x86.cpp  sensors.h  storage.cpp  storage.h  usb_test.cpp
src/modules/network/: arp_table.cpp  arp_table.h  interfaces.cpp  interfaces.h  interfaces_test.cpp  ip_connections.h  ip_connections_test.cpp  network.cpp
src/modules/shared/: vendor.cpp  vendor.h
src/tests/: CMakeLists.txt
sysinfo/: CMakeLists.txt  README.md
sysinfo/src/: CMakeLists.txt
sysinfo/src/app/: CMakeLists.txt  main.cpp
sysinfo/src/base/: CMakeLists.txt  file.cpp  file.h  process.cpp  process.h  string.cpp  string.h  string_test.cpp  unit.cpp
sysinfo/src/config/: CMakeLists.txt  config.h
sysinfo/src/controllers/: CMakeLists.txt  main_controller.cpp  main_controller.h  shell.cpp  shell.h
sysinfo/src/formats/: CMakeLists.txt
sysinfo/src/formats/computer/: boots.cpp  boots.h  bootup.cpp  bootup.h  computer.cpp  computer.h  development.cpp  development.h  display.cpp  display.h  filesystem.cpp  filesystem.h  group.cpp  group.h  groups.cpp  groups.h  language.cpp  language.h  languages.cpp  languages.h  memory.cpp  memory.h  modules.cpp  modules.h  operation_system.cpp  operation_system.h  summary.cpp  uptime.cpp  uptime.h  uptime_info.cpp  uptime_info.h  user.cpp  user.h  users.cpp  users.h
sysinfo/src/formats/devices/: audio_devices.h  battery.cpp  battery.h  devices.cpp  devices.h  dmi.cpp  dmi.h  input_devices.cpp  input_devices.h  memory.cpp  memory.h  pci.cpp  pci.h  processor.cpp  processor.h  sensors.cpp  sensors.h  storage.cpp  storage.h  usb.cpp  usb.h
sysinfo/src/formats/network/: arp_table.cpp  arp_table.h  dns_servers.cpp  dns_servers.h  interfaces.cpp  interfaces.h  ip_connections.cpp  ip_connections.h  network.cpp  network.h  routing_table.cpp  routing_table.h
sysinfo/src/modules/: CMakeLists.txt
sysinfo/src/modules/computer/: boots.cpp  boots.h  bootup.cpp  bootup.h  bootup_test.cpp  computer.cpp  computer.h  computer_test.cpp  display.cpp  environment.cpp  filesystem.h  group.cpp  group.h  group_test.cpp  groups.cpp  groups.h  groups_test.cpp  language.cpp  language.h  language_test.cpp  languages.cpp  memory.cpp  memory.h  memory_test.cpp  modules.cpp  modules.h  operation_system.cpp  operation_system.h  operation_system_test.cpp  summary.h  uptime.cpp  uptime.h  uptime_test.cpp  user.cpp  user.h  user_test.cpp  users.cpp  users.h
sysinfo/src/modules/devices/: audio_devices_test.cpp  battery.cpp  battery_test.cpp  devices.cpp  devices.h  dmi.cpp  dmi.h  dmi_test.cpp  input_devices.cpp  input_devices_test.cpp  memory.cpp  memory.h  pci.cpp  pci_test.cpp  processor.cpp  processor.h  processor_alpha.cpp  processor_test.cpp  processor_x86.cpp  processor_x86.h  processor_x86_test.cpp  sensors.cpp  sensors.h  sensors_test.cpp  storage.cpp  storage_test.cpp  usb.cpp  usb.h
sysinfo/src/modules/network/: arp_table.cpp  arp_table_test.cpp  dns_servers.cpp  dns_servers.h  dns_servers_test.cpp  interfaces.cpp  interfaces.h  interfaces_test.cpp  ip_connections.cpp  network.cpp  network.h  routing_table.cpp  routing_table.h  routing_table_test.cpp
sysinfo/src/modules/shared/: vendor_test.cpp
sysinfo/src/tests/: qt_test_main.cpp
tools/: install-deps.sh
