
set(SOURCE_FILES
    computer/boots.cpp
    computer/boots.h
    computer/computer.cpp
    computer/computer.h
    computer/development.cpp
    computer/development.h
    computer/environment.h
    computer/display.cpp
    computer/display.h
    computer/filesystem.cpp
    computer/filesystem.h
    computer/groups.cpp
    computer/groups.h
    computer/languages.cpp
    computer/languages.h
    computer/memory.cpp
    computer/memory.h
    computer/modules.cpp
    computer/modules.h
    computer/operation_system.cpp
    computer/operation_system.h
    computer/uptime.cpp
    computer/uptime.h
    computer/users.cpp
    computer/users.h

    devices/battery.cpp
    devices/battery.h
    devices/devices.cpp
    devices/devices.h
    devices/dmi.cpp
    devices/dmi.h
    devices/input_devices.cpp
    devices/input_devices.h
    devices/memory.cpp
    devices/memory.h
    devices/pci.cpp
    devices/pci.h
    devices/usb.cpp
    devices/usb.h

    network/arp_table.cpp
    network/arp_table.h
    network/dns_servers.cpp
    network/dns_servers.h
    network/interfaces.cpp
    network/interfaces.h
    network/ip_connections.cpp
    network/ip_connections.h
    network/routing_table.cpp
    network/routing_table.h
    )

add_library(sysinfo-formats STATIC
    ${SOURCE_FILES}
    )
target_link_libraries(sysinfo-formats
    Qt5::Core
    )